HERB-54 Fix sidebar search form alignment

--- a/custom/themes/0_unbherbarium_ca/src/scss/style.scss
+++ b/custom/themes/0_unbherbarium_ca/src/scss/style.scss
@@ -251,6 +251,11 @@ footer .unb-lib-logo {
   max-width: 350px;
 }
 
+.block .form-actions {
+  margin: 0;
+  width: 40%;
+}
+
 .hidden,
 #views-exposed-form-unb-search-page label {
   overflow: hidden;
